--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,10 @@
 buildscript {
     ext {
+        compose_version_ui = '1.2.0'
         compose_version = '1.2.0'
+    }
+    dependencies {
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.38.1"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
